[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ghlabel"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "MJ Sabit (seyLu)", email = "98249191+seyLu@users.noreply.github.com" },
]
description = "CLI tool to help setup Github Labels from a yaml/json config file."
readme = "README.md"
dynamic = ["version"]
keywords = [
    "github-tool",
    "github-labels",
    "cli-tool",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "typer[all]==0.12.3",
  "requests==2.32.3",
  "python-dotenv==1.0.1",
  "PyYAML==6.0.1",
]

[project.urls]
Documentation = "https://github.com/seyLu/ghlabel#readme"
"Homepage" = "https://github.com/seyLu/ghlabel"
"Bug Tracker" = "https://github.com/seyLu/ghlabel/issues"

[project.scripts]
ghlabel = "ghlabel.cli:app"


[tool.hatch.version]
path = "src/ghlabel/__about__.py"


[tool.ruff.lint]
select = [
    "A", # flake8-builtins
    "B", # flake8-bugbear
    "S", # flake8-bandit
    "E", # Pyflakes
    "F", # Pycodestyle
    "I", # Isort
    "PL", # Pylint
    "RUF", # Ruff-specific rules
]
ignore = ["E501"]


[tool.mypy]
strict = "True"
implicit_reexport = "True"
check_untyped_defs = true
ignore_missing_imports = true

# Exclude type checking on files/dirs
exclude = [
  # TOML basic string (double-quotes, backslash and other characters need escaping)
  # TOML literal string (single-quotes, no escaping necessary)
]
